fix: 统一空策略配置校验